--- a/html/components/component_input_toggle.html
+++ b/html/components/component_input_toggle.html
@@ -102,9 +102,23 @@
 				<dl>
 					<dt></dt>
 					<dd>
-						<div class="inp inp-toggle inp-toggle-large">
+						<div class="inp inp-toggle inp-toggle-inner-text">
 							<label>
 								<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지">
+							</label>
+						</div>
+					</dd>
+				</dl>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>inp-toggle-large</h2>
+				<dl>
+					<dt></dt>
+					<dd>
+						<div class="inp inp-toggle-large">
+							<label>
+								<input type="checkbox" aria-label="키맨">
 							</label>
 						</div>
 					</dd>
