--- a/html/components/component_list.html
+++ b/html/components/component_list.html
@@ -95,7 +95,7 @@
 								</picture>
 								<strong class="headline-small">나고객</strong>
 							</div>
-							<div class="tags tags-medium tags-lightBlue">키맨</div>
+							<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
 						</div>
 						<div class="divide-list mt16">
 							<span>부서명</span>
