--- a/html/layout/layout-header.html
+++ b/html/layout/layout-header.html
@@ -155,6 +155,7 @@
 									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 								</div>
+								<p class="validate-text">Invalid message</p>
 							</div>
 							<div class="gnb-menu-search-recent" style="display:none;">
 								<dl>
