--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -86,6 +86,8 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .width-auto {width:auto!important;}
 .min-width-auto {min-width:auto!important;}
 .relative {position:relative!important;}
+.table-layout-auto {table-layout:auto!important;}
+.br8 {border-radius:8px!important;}
 
 /* font */
 .fw-300 {font-weight:300!important;}
