--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -172,7 +172,7 @@
 								<span>과장</span>
 							</span>
 							<span class="company-name">파인너츠</span>
-							<span class="tags tags-small tags-lightBlue">키맨</span>
+							<span class="tags tags-small tags-lightBlue"><i class="icon-only icon-15 icon-keyman"></i>키맨</span>
 						</button>
 						<figure>
 							<div class="due-date">
@@ -343,7 +343,7 @@
 									<i class="icon-only icon-16 icon-time bg-icon-gray_1"></i>
 									하루종일
 								</div>
-								<span class="division h12 mx10"></span>
+								<span class="division h12 mx6"></span>
 								<div class="schedule-detail-inner">
 									<i class="icon-only icon-16 icon-location bg-icon-gray_1"></i>
 									12층 3번 회의실
@@ -364,7 +364,7 @@
 									<i class="icon-only icon-16 icon-time bg-icon-gray_1"></i>
 									오후 2:00 - 오후 4:30
 								</div>
-								<span class="division h12 mx10"></span>
+								<span class="division h12 mx6"></span>
 								<div class="schedule-detail-inner">
 									<i class="icon-only icon-16 icon-location bg-icon-gray_1"></i>
 									12층 3번 회의실
