--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -293,8 +293,8 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .gnb-user-info .gnb-user-name span {font-size:18px;font-weight:400;color:var(--typography-caption);}
 .gnb-user-info .gnb-login-date {font-size:14px;font-weight:400;color:var(--gray-500);}
 .gnb-menu-search {}
-.gnb-menu-search .form {display:flex;padding:16px;gap:8px;}
-.gnb-menu-search .gnb-menu-search-close {width:0;flex:0;height:52px;overflow:hidden;transition:all 0.3s ease;}
+.gnb-menu-search .form {padding:16px;transition:padding-left 0.3s ease;}
+.gnb-menu-search .gnb-menu-search-close {width:0;flex:0;height:0;overflow:hidden;transition:all 0.3s ease;position:absolute;left:0;top:0;}
 .gnb-menu-search .gnb-menu-search-close button {display:flex;width:40px;height:52px;
     -webkit-mask-position:center center;
     mask-position:center center;
@@ -360,7 +360,9 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .modal__container.is-search .main-header {margin-top:calc(var(--header-height) * -1);}
 .modal__container .gnb-user-info {transition:margin 0.3s ease;margin-top:0;}
 .modal__container.is-search .gnb-user-info {margin-top:-58px;}
-.modal__container.is-search .gnb-menu-search .gnb-menu-search-close {width:40px;flex:0 0 40px;}
+.modal__container.is-search .gnb-menu-search .form {padding-left:64px;}
+
+.modal__container.is-search .gnb-menu-search .gnb-menu-search-close {width:40px;flex:0 0 40px;height:52px;}
 /* .modal__container .gnb-menu-search .gnb-menu-search-close button {} */
 
 /* main */
@@ -465,7 +467,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .select-option li.select-all button {}
 .select-option li.select-all button span {font-weight:700;}
 .select-option li.select-active button {background-color:var(--background-bg_gray);padding-right:52px;}
-.select-option li.select-active button:after {content:'';position:absolute;right: 12px;top:50%;margin-top: -10px;display:block;width: 20px;height: 20px;background:url(/resources/images/ico/ico_select_option.svg) center center / contain no-repeat;}
+.select-option li.select-active button:after {content:'';position:absolute;right:12px;top:50%;margin-top:-10px;display:block;width:20px;height:20px;background:url(/resources/images/ico/ico_select_option.svg) center center / contain no-repeat;}
 
 .select-exchange li button {display:flex;align-items:center;}
 .select-exchange li span {width:140px;margin-right:24px;}
@@ -479,7 +481,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .micromodal-slide-select .select-option ul {margin-bottom:0;}
 .micromodal-slide-select .select-option ul li button {height:48px;padding:0 16px;}
 .micromodal-slide-select .select-option ul li button span {font-size:16px;display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-.micromodal-slide-select .select-option ul li.select-active button {padding-right: 32px;}
+.micromodal-slide-select .select-option ul li.select-active button {padding-right:32px;}
 
 /* dropdown-option */
 .dropdown-option {}
@@ -593,7 +595,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .main-stock-list {}
 .main-stock-list ul {margin-left:-16px;margin-right:-16px;padding-left:16px;padding-right:16px;gap:12px;}
 .main-stock-list ul li {}
-.main-stock-list ul li a {display:block;width:128px;height:176px;background-color:var(--surface-surface);border-radius:8px;padding:24px 0 24px 24px;}
+.main-stock-list ul li a {display:block;/* width:128px; */height:176px;background-color:var(--surface-surface);border-radius:8px;padding:24px;white-space:nowrap;}
 .main-stock-list dl {}
 .main-stock-list dl dt {font-size:18px;font-weight:700;color:var(--typography-title);line-height:1;padding:0 4px;}
 .main-stock-list dl dt i {vertical-align:top;}
