--- a/html/components/component_input_toggle.html
+++ b/html/components/component_input_toggle.html
@@ -102,7 +102,7 @@
 				<dl>
 					<dt></dt>
 					<dd>
-						<div class="inp inp-toggle inp-toggle-inner-text">
+						<div class="inp inp-toggle-inner-text">
 							<label>
 								<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지">
 							</label>
