--- a/resources/css/ui-variable.css
+++ b/resources/css/ui-variable.css
@@ -232,11 +232,13 @@
     --typography-placeholder:#0C0C0D3D;
     --typography-title:#212528;
     --typography-white:#FFFFFF;
-    --header-zIndex:100;
-    --sticky-zIndex:50;
-    --tab-zIndex:10;
     --header-height:52px;
-    --loader-zIndex:1000;
+    --tab-zIndex:10;
+    --sticky-zIndex:50;
+    --header-zIndex:100;
+    --alert-zIndex:200;
+    --modal-zIndex:300;
+    --loader-zIndex:400;
 }
 .fc-black-0{color:var(--black-0)!important;}
 .fc-black-100{color:var(--black-100)!important;}
