--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -252,7 +252,7 @@ div:where(.swal2-container) div:where(.swal2-actions).btn-wrap {margin:0;padding
 div:where(.swal2-container) div:where(.swal2-actions) .btn-alert {flex:1;font-size:16px;font-weight:700;line-height:60px;color:var(--gray900);text-align:center;}
 div:where(.swal2-container) div:where(.swal2-actions) .btn-alert:not(:last-child) {border-right:1px solid var(--gray100);}
 
-div:where(.swal2-container) {z-index:calc(var(--header-zIndex) +  1001);padding:0;transition:background-color .3s;}
+div:where(.swal2-container) {z-index:var(--alert-zIndex);padding:0;transition:background-color .3s;}
 div:where(.swal2-container).swal2-backdrop-show, div:where(.swal2-container).swal2-noanimation {background-color:var(--status-dimmed);}
 @keyframes swal2-show {
     0% {transform:scale(0.99)}
@@ -267,7 +267,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 /* micromodal */
 .modal {font-family:inherit;}
-.micromodal-slide.is-open {position:relative;z-index:calc(var(--header-zIndex) +  1000);}
+.micromodal-slide.is-open {position:relative;z-index:var(--modal-zIndex);}
 .modal__container {padding:0;max-width:none;max-height:calc(100% - 40px);flex:1 1 100%;background-color:var(--white-100);border-radius:20px 20px 0 0;display:flex;flex-direction:column;}
 .modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;flex:1 1 calc(100% - 56px);overflow-y:auto;}
 
@@ -334,7 +334,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 }
 @keyframes mmslideLeftIn {
     from {transform:translateX(100%);}
-    to {transform:translateX(0);opacity:1;z-index:calc(var(--header-zIndex) +  1000);}
+    to {transform:translateX(0);opacity:1;z-index:var(--modal-zIndex);}
 }
 @keyframes mmslideLeftOut {
     from {transform:translateX(0);}
