--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -81,6 +81,7 @@
 				<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
 				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-compare"></i></button>
 				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-check"></i></button>
+				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-chevron-large bg-icon-white"></i></button>
 			</div>
 			<hr>
 			<h2>Button <span>Medium</span></h2>
