--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -938,6 +938,42 @@
 					<i class="icon-only icon-12 icon-keyman"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-notext</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-18 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-15 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-notext bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-notext bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nobook</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-18 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-15 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-nobook bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-nobook bg-icon-gray_1"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
