--- a/html/components/component_tag.html
+++ b/html/components/component_tag.html
@@ -89,9 +89,9 @@
 					<div class="tags tags-small tags-lightRed">tags-lightRed</div>
 					<div class="tags tags-small tags-lightYellow">tags-lightYellow</div>
 					<div class="tags tags-small tags-lightPink">tags-lightPink</div>
-					<div class="tags tags-small tags-red-50">tags-red-50</div>
+					<div class="tags tags-small tags-cn">tags-cn</div>
 					<div class="tags tags-small tags-red-100">tags-red-100</div>
-					<div class="tags tags-small tags-red-200">tags-red-200</div>
+					<div class="tags tags-small tags-jp">tags-jp</div>
 					<div class="tags tags-small tags-FFF4EB">tags-FFF4EB</div>
 					<div class="tags tags-small tags-green-50">tags-green-50</div>
 					<div class="tags tags-small tags-disabled_bg">tags-disabled_bg</div>
@@ -99,10 +99,10 @@
 					<div class="tags tags-small tags-gray">tags-gray</div>
 					<div class="tags tags-small tags-deepBlue">tags-deepBlue</div>
 					<div class="tags tags-small tags-deepBlue50">tags-deepBlue50</div>
-					<div class="tags tags-small tags-deepBlue-900">tags-deepBlue-900</div>
+					<div class="tags tags-small tags-eu">tags-eu</div>
 					<div class="tags tags-small tags-surface50">tags-surface50</div>
 					<div class="tags tags-small tags-white">tags-white</div>
-					<div class="tags tags-small tags-gray-800">tags-gray800</div>
+					<div class="tags tags-small tags-kr">tags-gray800</div>
 				</div>
 			</div>
 			<hr>
