--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -294,7 +294,7 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .gnb-user-info .gnb-login-date {font-size:14px;font-weight:400;color:var(--gray-500);}
 .gnb-menu-search {}
 .gnb-menu-search .form {padding:16px;transition:padding-left 0.3s ease;}
-.gnb-menu-search .gnb-menu-search-close {width:0;flex:0;height:0;overflow:hidden;transition:all 0.3s ease;position:absolute;left:0;top:0;}
+.gnb-menu-search .gnb-menu-search-close {width:0;flex:0;height:0;overflow:hidden;transition:all 0.3s ease;position:absolute;left:16px;top:16px;}
 .gnb-menu-search .gnb-menu-search-close button {display:flex;width:40px;height:52px;
     -webkit-mask-position:center center;
     mask-position:center center;
@@ -385,7 +385,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .content .bottom-btn .btn-wrap {padding:12px 16px;}
 .content .bottom-btn .btn-wrap.btn-nowrap {padding:8px 16px;}
 
-.financial-player {background-color:var(--surface-surface900);border-radius:10px 10px 0 0;padding:12px 16px;display:flex;align-items:center;justify-content:space-between;}
+.financial-player {background-color:var(--surface-surface900);border-radius:20px 20px 0 0;padding:12px 16px;display:flex;align-items:center;justify-content:space-between;}
 .financial-player-title {display:flex;gap:8px;align-items:center;justify-content:center;}
 .financial-player-title strong {font-size:18px;font-weight:700;color:var(--typography-white);line-height:1;}
 .financial-player-controller {display:flex;gap:14px;align-items:center;justify-content:center;}
