--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -191,7 +191,8 @@
 						showMonthAfterYear: true,
 						yearSuffix: '.',
 						// minDate: 0,
-						showButtonPanel: false,
+						showButtonPanel: true,
+						currentText: "오늘",
 						closeText: "닫기",
 						showOtherMonths: true,
 						onSelect: function(input, date) {
@@ -293,7 +294,8 @@
 				showMonthAfterYear: true,
 				yearSuffix: '.',
 				// minDate: 0,
-				showButtonPanel: false,
+				showButtonPanel: true,
+				currentText: "오늘",
 				closeText: "닫기",
 				showOtherMonths: true,
 				onSelect: function(date, dp) {},
